Add design elements content

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -13,5 +13,13 @@
 	        <li><a href="#">Link Item</a></li>
 	    </ul>
 		</div>
+
+		<div class="nav-local">
+			<ul>
+	        <li><a href="#">Link Item</a></li>
+	        <li><a href="#">Link Item</a></li>
+	        <li><a href="#">Link Item</a></li>
+	    </ul>
+		</div>
 	</body>
 </html>
