--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -36,8 +36,8 @@
 					<a href="#"><li>Tab 3</li></a>
 				</ul>
 			</div>
-			
 			<hr>
+			
 			<!-- Form  -->
 			<h1>Form Elements</h1>
 			<h2>Input Elements</h2>
@@ -58,6 +58,31 @@
 					<option value="option3">Option 3</option>
 				</select>
 			</form>
+			<hr>
+			
+			<!-- Buttons -->
+			<h1>Buttons</h1>
+			<h2>Regular buttons</h2>
+			<button type="button" class="btn-regular btn-normal">Normal Button</button>
+			<button type="button" class="btn-regular btn-normal" disabled>Disabled Button</button>
+			<button type="button" class="btn-regular btn-primary">Primary Button</button>
+			<button type="button" class="btn-regular btn-danger">Danger Button</button>
+			<div class="btn-group">
+				<button type="button" class="btn-regular btn-normal">Button</button>
+				<button type="button" class="btn-regular btn-normal">Button</button>
+				<button type="button" class="btn-regular btn-normal">Button</button>
+			</div>
+
+			<h2>Small buttons</h2>
+			<button type="button" class="btn-small btn-normal">Normal Button</button>
+			<button type="button" class="btn-small btn-normal" disabled>Disabled Button</button>
+			<button type="button" class="btn-small btn-primary">Primary Button</button>
+			<button type="button" class="btn-small btn-danger">Danger Button</button>
+			<div class="btn-group">
+				<button type="button" class="btn-small btn-normal">Button</button>
+				<button type="button" class="btn-small btn-normal">Button</button>
+				<button type="button" class="btn-small btn-normal">Button</button>
+			</div>
 			
 		</div>
 	</body>
